templates/green/css/template.css
/* ... */
@-o-keyframes movedown {
    0% {
        -o-transform: translate(0, -100px);
        opacity: 0;
    }
    100% {
        -o-transform: translate(0, 0);
        opacity: 1;
    }
}

@keyframes movedown {
    0% {
        transform: translate(0, -100px);
        opacity: 0;
    }
    100% {
        transform: translate(0, 0);
        opacity: 1;
    }
}

/*== Rotate ==*/
@-webkit-keyframes rotate {
    0% {
        -webkit-transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(720deg);
    }
}

@-moz-keyframes rotate {
    0% {
        -moz-transform: rotate(0deg);
    }
    100% {
        -moz-transform: rotate(720deg);
    }
}

@-o-keyframes rotate {
    0% {
        -o-transform: rotate(0deg);
    }
    100% {
        -o-transform: rotate(720deg);
    }
}

@keyframes rotate {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(720deg);
    }
}

/*=== rocket ===*/
@-webkit-keyframes house {
    0% {
        background-position: center bottom;
    }
    100% {
        background-position: 500px bottom;
    }
}

@-moz-keyframes house {
    0% {
        background-position: center bottom;
    }
    100% {
        background-position: 500px bottom;
    }
}

@-o-keyframes house {
    0% {
        background-position: center bottom;
    }
    100% {
        background-position: 500px bottom;
    }
}

@keyframes house {
    0% {
        background-position: center bottom;
    }
    100% {
        background-position: 500px bottom;
    }
}
/**/


.st-plg-social-copyright {
    display: none;
}

@font-face {
    font-family: "HelveticaNeueLTStd-HvCn";
/*     src: url('fonts/HelveticaNeueLTStd-HvCn.ttf'); */
}

@font-face {
    font-family: "HelveticaNeueLTStd-LtCn";
/*     src: url('fonts/HelveticaNeueLTStd-LtCn.otf'); */
}

@font-face {
    font-family: "MgOpen Modata";
/*     src: url('fonts/MgOpenModataRegular.ttf'); */
}

@font-face {
    font-family: "HelveticaLTStd-Roman";
/*     src: url('fonts/HelveticaLTStd-Roman.otf'); */
}


.css3-effect a,
.css3-effect a:hover,
.css3-effect .st-clients-slider .sequence-next:hover,
.css3-effect .st-clients-slider .sequence-prev:hover {
    transition: all 0.3s;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -ms-transition: all 0.3s;
    -o-transition: all 0.3s;
}

/*===Our Work===*/
#avatar-full-1-example-block {
    background: #282A32;
}

.st-our-work .st-module-heading {
    background: url('../images/ourwork.png') repeat-x;
    background-position: 0 25px;
    /*===font-family: "HelveticaNeueLTStd-HvCn";
	font-size:30px;===*/
    color: #FFFFFF;
    padding: 0px 0 0px 0;
    margin: 0 auto;
    max-width: 1140px;
    text-align: center;
}

.st-our-work .st-module-heading span {
    padding: 0 10px 0 10px;
    background: #282A32;
}

.st-our-work .category-wall span {
    border: none;
    color: #858585;
    font-family: "HelveticaNeueLTStd-LtCn";
    font-size: 18px;
    margin-left: 0;
    margin-right: 12px;
}

.st-our-work .category-wall span:hover,
.st-our-work .category-wall span.current {
    color: #7AC0A8;
}

.st-our-work .category-wall {
    padding: 0px 0 0px 0;
}

.st-our-work .layout-wall .inner {
    margin: 0;
    padding: 0;
    position: relative;
}

.st-our-work .layout-wall .inner:hover {
    cursor: pointer;
}

.st-our-work .layout-wall .inner .media:before {
    content: '';
    background: #282a32;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    opacity: 0.3;
    filter: alpha(opacity=30);
    transition: all 0.5s;
    -webkit-transition: all 0.5s;
    -moz-transition: all 0.5s;
    -ms-transition: all 0.5s;
    -o-transition: all 0.5s;
}

.css3-effect .st-our-work .layout-wall .item.active .inner .media:before,
.css3-effect .st-our-work .layout-wall .item.active .inner:hover .media:before,
.css3-effect .st-our-work .layout-wall .inner:hover .media:before {
    opacity: 0.8;
    filter: alpha(opacity=80);
    transition: all 0.5s;
    -webkit-transition: all 0.5s;
    -moz-transition: all 0.5s;
    -ms-transition: all 0.5s;
    -o-transition: all 0.5s;
}

.css3-effect .st-our-work .layout-wall .item .inner .media:after {
    content: '';
    position: absolute;
    width: 30px;
    height: 30px;
    background: #fff url(../images/wall-icon.png) no-repeat center center;
    left: 0;
    right: 0;
    margin: 0 auto;
    border-radius: 50%;
    bottom: 15%;
    opacity: 0;
    filter: alpha(opacity=0);
    transition: all 0.5s;
    -webkit-transition: all 0.5s;
    -moz-transition: all 0.5s;
    -ms-transition: all 0.5s;
    -o-transition: all 0.5s;
}

.css3-effect .st-our-work .layout-wall .item .inner:hover .media:after {
    bottom: 30%;
    opacity: 1;
    filter: alpha(opacity=100);
    transition: all 0.5s;
    -webkit-transition: all 0.5s;
    -moz-transition: all 0.5s;
    -ms-transition: all 0.5s;
    -o-transition: all 0.5s;

}

.css3-effect .st-our-work .layout-wall .item .inner .info {
    margin: 0;
    padding: 0;
    position: absolute;
    overflow: hidden;
    left: 0;
    right: 0;
    top: 15%;
    text-align: center;
    opacity: 0;
    filter: alpha(opacity=0);
    background: none;
    transition: all 0.5s;
    -webkit-transition: all 0.5s;
    -moz-transition: all 0.5s;
    -ms-transition: all 0.5s;
    -o-transition: all 0.5s;
}

.css3-effect .st-our-work .layout-wall .item .inner:hover .info {
    top: 29%;
    opacity: 1;
    filter: alpha(opacity=100);
    transition: all 0.7s;
    -webkit-transition: all 0.7s;
    -moz-transition: all 0.7s;
    -ms-transition: all 0.7s;
    -o-transition: all 0.7s;
}

.st-our-work .layout-wall .item .inner .info .title {
    margin: 0;
}

.st-our-work .layout-wall .item .inner .info .title,
.st-our-work .layout-wall .item .inner .info .title a {
    font-family: "HelveticaNeueLTStd-HvCn";
    font-size: 20px;
    color: #fff;
    line-height: 30px;
}
/* ... */

